# hydraforge-pdk

./: .gitignore  CMakeLists.txt  README.md
_verify_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
include/hydraforge/pdk/: agent_macros.h  pdk.h  safe_exec.h  tool_macros.h
tests/: test_pdk_macros_standalone.cpp
